--- a/EIA_Data.ipynb
+++ b/EIA_Data.ipynb
@@ -207,6 +207,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-16T00:32:15.099360Z",
+     "start_time": "2020-09-16T00:32:09.548500Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master af6715f] Desktop\n",
+      " 2 files changed, 300 insertions(+)\n",
+      " create mode 100644 .ipynb_checkpoints/EIA_Data-checkpoint.ipynb\n",
+      " create mode 100644 EIA_Data.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/thekhan314/CrudeOilApp.git\n",
+      "   903a9a5..af6715f  master -> master\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add .\n",
+    "!git commit -m \"Desktop\"\n",
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
