--- a/EIA_Data.ipynb
+++ b/EIA_Data.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T03:08:53.474638Z",
-     "start_time": "2020-09-16T03:08:47.016321Z"
+     "end_time": "2020-09-16T03:15:02.009673Z",
+     "start_time": "2020-09-16T03:14:56.978713Z"
     }
    },
    "outputs": [
@@ -36,8 +36,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master c9320b7] Desktop\n",
-      " 1 file changed, 8992 insertions(+), 26 deletions(-)\n"
+      "[master d0c0e88] Desktop\n",
+      " 1 file changed, 1460 insertions(+), 9246 deletions(-)\n",
+      " rewrite EIA_Data.ipynb (84%)\n"
      ]
     },
     {
@@ -45,7 +46,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   f13adc7..c9320b7  master -> master\n"
+      "   c9320b7..d0c0e88  master -> master\n"
      ]
     }
    ],
