--- a/1_MainAnalysis.ipynb
+++ b/1_MainAnalysis.ipynb
@@ -19,13 +19,22 @@
    "outputs": [],
    "source": [
     "!git add .\n",
-    "!git commit -m \"EIA to ds2\"\n",
+    "!git commit -m \"App\"\n",
     "!git push"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! conda install -c anaconda requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-27T22:33:01.852262Z",
@@ -41,7 +50,14 @@
     "import sqlite3\n",
     "import pprint as pp\n",
     "import pdb\n",
-    "dep = Depot()"
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "dep = Depot()\n",
+    "import plotly.offline as pyo\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "from statsmodels.graphics.tsaplots import plot_acf,plot_pacf\n",
+    "from statsmodels.tsa.holtwinters import SimpleExpSmoothing\n",
+    "from statsmodels.tsa.stattools import adfuller,kpss,coint,bds,q_stat,grangercausalitytests,levinson_durbin\n"
    ]
   },
   {
@@ -50,12 +66,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'abstract','document_type','headline'['main'],'headline'['print_headline'],'keywords'"
+    "from pmdarima.arima import auto_arima\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Daily Price"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-27T22:34:04.154071Z",
@@ -63,24 +91,98 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'EIA_Series' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-40d6a70489b9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdesc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdaily_price\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mEIA_Series\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Daily Price'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'PET.RWTC.D'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mspot_feat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdaily_price\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mseries_frame\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdep\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mingest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdaily_price\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'EIA_Series' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "desc = ''\n",
     "daily_price = EIA_Series('Daily Price','PET.RWTC.D')\n",
-    "spot_feat = Dataset(daily_price.series_frame)\n",
-    "dep.ingest(daily_price)"
+    "dep.ingest(daily_price)\n",
+    "\n",
+    "x = daily_price.scaled.asfreq(freq='B').fillna(method='ffill')\n",
+    "x = x['2015-01-01':'2019-12-01']\n",
+    "result = seasonal_decompose(x, model='additive',period=365)  \n",
+    "result.plot();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "dftest = adfuller(x,autolag='AIC')\n",
+    "print(dftest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Auto Arima"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auto_arima(x,start_p=1,start_q=1,max_p = 10,max_q=10,seasonal=True,trace=True,m=365)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "span = 365\n",
+    "alpha = 2/(span+1) # Standard span formula\n",
+    "\n",
+    "\n",
+    "\n",
+    "model =SimpleExpSmoothing(x)\n",
+    "\n",
+    "fitted_model = model.fit(\n",
+    "    smoothing_level=alpha,\n",
+    "    optimized=False)\n",
+    "fitted_model = model.fit()\n",
+    "\n",
+    "daily_price.frame['SimpleExp'] = fitted_model.fittedvalues.shift(-1) \n",
+    "\n",
+    "df_slice = daily_price.frame[['SimpleExp','scaled_Daily Price']]\n",
+    "\n",
+    "df_slice['2016-01-01':'2016-06-01'].plot(figsize=(10,20))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ARIMA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Daily Production"
    ]
   },
   {
@@ -96,7 +198,12 @@
    "source": [
     "desc = ''\n",
     "daily_production = EIA_Series('Weekly Stocks','PET.WTTSTUS1.W')\n",
-    "dep.ingest(daily_production)"
+    "dep.ingest(daily_production)\n",
+    "\n",
+    "x2 = daily_production.scaled.asfreq(freq='B').fillna(method='ffill')\n",
+    "x2 = x2['2015-01-01':'2019-12-01']\n",
+    "result = seasonal_decompose(x2, model='additive',period=365)  \n",
+    "result.plot();"
    ]
   },
   {
@@ -105,7 +212,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dep.originals"
+    "granger_frame = pd.concat([x,x2],axis=1)\n",
+    "granger_frame.columns = ['price','stocks']\n",
+    "granger_frame.head()\n",
+    "g_test = grangercausalitytests(granger_frame,maxlag=90);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(g_test[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import chart_studio.plotly as py\n",
+    "import plotly.figure_factory as ff\n",
+    "import plotly.graph_objects as go\n",
+    "import pandas as pd\n",
+    "import plotly\n",
+    "\n",
+    "y = x.index\n",
+    "\n",
+    "trace1 = go.Scatter(\n",
+    "        x=y,\n",
+    "        y=x,\n",
+    "        mode='lines',\n",
+    "        name='Spot Price'\n",
+    ")\n",
+    "\n",
+    "trace2 = go.Scatter(\n",
+    "    x=x2.index,\n",
+    "    y=x2,\n",
+    "    mode='lines',\n",
+    "    name = 'Weekly Inventory')\n",
+    "\n",
+    "data = [trace1,trace2]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title = 'Daily Stocks',\n",
+    "    xaxis = {\n",
+    "        'title':'Time',\n",
+    "    },\n",
+    "    yaxis = dict(\n",
+    "        title='Scaled price'\n",
+    "        ),\n",
+    "    hovermode='closest'\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=data, layout = layout)\n",
+    "\n",
+    "plotly.offline.iplot(fig,filename='daily_price')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Monthly Crude Imports"
    ]
   },
   {
@@ -123,9 +294,13 @@
     "desc = 'US imports of crude oil, monthly'\n",
     "\n",
     "monthly_imports = EIA_Series('Monthly Imports','PET.MCRIMUS1.M',desc,date_format='%Y%m' )\n",
-    "import_feat = Dataset(monthly_imports.series_frame)\n",
-    "import_feat['Monthly Imports'].show_report()\n",
-    "dep.ingest(monthly_imports)"
+    "dep.ingest(monthly_imports)\n",
+    "\n",
+    "x = monthly_imports.scaled\n",
+    "x = x['2000-01-01':]\n",
+    "\n",
+    "result = seasonal_decompose(x, model='additive',period=12)  \n",
+    "result.plot();\n"
    ]
   },
   {
@@ -182,7 +357,24 @@
     "\n",
     "df_dow['Date']=pd.to_datetime(df_dow['Date'])\n",
     "        \n",
-    "df_dow.set_index(df_dow['Date'],drop=True,inplace=True)"
+    "df_dow.set_index(df_dow['Date'],drop=True,inplace=True)\n",
+    "\n",
+    "df_dow.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desc = 'US imports of crude oil, monthly'\n",
+    "\n",
+    "x = df_dow['Close']\n",
+    "x = x['2000-01-01':]\n",
+    "\n",
+    "result = seasonal_decompose(x, model='additive',period=365)  \n",
+    "result.plot();"
    ]
   },
   {
@@ -344,18 +536,6 @@
    "language": "python",
    "name": "python3"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
-  },
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
@@ -365,7 +545,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "512px"
+   },
    "toc_section_display": true,
    "toc_window_display": false
   },
