--- a/2_NYT_API.ipynb
+++ b/2_NYT_API.ipynb
@@ -28,12 +28,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datashop import *\n",
     "import plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'id', 'date', 'abstract', 'doc_type', 'main_headline',\n",
+       "       'print_headline', 'keywords', 'newsdesk', 'url'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "df1 = pd.read_csv('data/nyt_articles.csv')\n",
+    "df1.columns"
    ]
   },
   {
@@ -69,6 +92,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "            Unnamed: 0                     0_keyword         0_type  \\\ndate_col                                                              \n2000-12-30           0                   Hunt Oil Co  organizations   \n2000-12-23           1                    New Mexico     glocations   \n2000-12-29           2  Oil (Petroleum) and Gasoline        subject   \n2000-12-31           3                        Brazil     glocations   \n2000-12-27           4                       Weather        subject   \n\n           10_keyword 10_type 11_keyword 11_type 12_keyword 12_type  \\\ndate_col                                                              \n2000-12-30        NaN     NaN        NaN     NaN        NaN     NaN   \n2000-12-23        NaN     NaN        NaN     NaN        NaN     NaN   \n2000-12-29        NaN     NaN        NaN     NaN        NaN     NaN   \n2000-12-31        NaN     NaN        NaN     NaN        NaN     NaN   \n2000-12-27        NaN     NaN        NaN     NaN        NaN     NaN   \n\n           13_keyword  ...                      date dict_lens  \\\ndate_col               ...                                       \n2000-12-30        NaN  ...  2000-12-30T05:00:00+0000         4   \n2000-12-23        NaN  ...  2000-12-23T05:00:00+0000         6   \n2000-12-29        NaN  ...  2000-12-29T05:00:00+0000         2   \n2000-12-31        NaN  ...  2000-12-31T05:00:00+0000         4   \n2000-12-27        NaN  ...  2000-12-27T05:00:00+0000         5   \n\n                                                        dicts doc_type  \\\ndate_col                                                                 \n2000-12-30  [{'name': 'organizations', 'value': 'Hunt Oil ...  article   \n2000-12-23  [{'name': 'glocations', 'value': 'New Mexico',...  article   \n2000-12-29  [{'name': 'subject', 'value': 'Oil (Petroleum)...  article   \n2000-12-31  [{'name': 'glocations', 'value': 'Brazil', 'ra...  article   \n2000-12-27  [{'name': 'subject', 'value': 'Weather', 'rank...  article   \n\n                                                           id  \\\ndate_col                                                        \n2000-12-30  nyt://article/0914c010-16d4-54bf-9098-4045adc3...   \n2000-12-23  nyt://article/1fe65aa7-59d3-500d-8071-b32e5eb5...   \n2000-12-29  nyt://article/e084f9f3-03e1-5608-a6ec-923d6bd3...   \n2000-12-31  nyt://article/07ee3d9c-57c2-5e1c-b1cc-b4b1cbbe...   \n2000-12-27  nyt://article/f577789f-abf5-5275-be64-cd1fe8fd...   \n\n                                                     keywords  \\\ndate_col                                                        \n2000-12-30  [{'name': 'organizations', 'value': 'Hunt Oil ...   \n2000-12-23  [{'name': 'glocations', 'value': 'New Mexico',...   \n2000-12-29  [{'name': 'subject', 'value': 'Oil (Petroleum)...   \n2000-12-31  [{'name': 'glocations', 'value': 'Brazil', 'ra...   \n2000-12-27  [{'name': 'subject', 'value': 'Weather', 'rank...   \n\n                                                main_headline  \\\ndate_col                                                        \n2000-12-30  BERKLEY PETROLEUM APPROVES SHAREHOLDER RIGHTS ...   \n2000-12-23                            Delta Petroleum in Deal   \n2000-12-29                           THE MARKETS: COMMODITIES   \n2000-12-31      Exploratory Oil Drilling From S to X and Back   \n2000-12-27                           THE MARKETS: COMMODITIES   \n\n                                     newsdesk  \\\ndate_col                                        \n2000-12-30            Business/Financial Desk   \n2000-12-23            Business/Financial Desk   \n2000-12-29            Business/Financial Desk   \n2000-12-31  Money and Business/Financial Desk   \n2000-12-27            Business/Financial Desk   \n\n                                               print_headline   date_col  \ndate_col                                                                  \n2000-12-30  COMPANY NEWS; BERKLEY PETROLEUM APPROVES SHARE... 2000-12-30  \n2000-12-23                            Delta Petroleum in Deal 2000-12-23  \n2000-12-29                           THE MARKETS: COMMODITIES 2000-12-29  \n2000-12-31  BUSINESS: DIARY; Exploratory Oil Drilling From... 2000-12-31  \n2000-12-27                           THE MARKETS: COMMODITIES 2000-12-27  \n\n[5 rows x 105 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>0_keyword</th>\n      <th>0_type</th>\n      <th>10_keyword</th>\n      <th>10_type</th>\n      <th>11_keyword</th>\n      <th>11_type</th>\n      <th>12_keyword</th>\n      <th>12_type</th>\n      <th>13_keyword</th>\n      <th>...</th>\n      <th>date</th>\n      <th>dict_lens</th>\n      <th>dicts</th>\n      <th>doc_type</th>\n      <th>id</th>\n      <th>keywords</th>\n      <th>main_headline</th>\n      <th>newsdesk</th>\n      <th>print_headline</th>\n      <th>date_col</th>\n    </tr>\n    <tr>\n      <th>date_col</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2000-12-30</th>\n      <td>0</td>\n      <td>Hunt Oil Co</td>\n      <td>organizations</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>2000-12-30T05:00:00+0000</td>\n      <td>4</td>\n      <td>[{'name': 'organizations', 'value': 'Hunt Oil ...</td>\n      <td>article</td>\n      <td>nyt://article/0914c010-16d4-54bf-9098-4045adc3...</td>\n      <td>[{'name': 'organizations', 'value': 'Hunt Oil ...</td>\n      <td>BERKLEY PETROLEUM APPROVES SHAREHOLDER RIGHTS ...</td>\n      <td>Business/Financial Desk</td>\n      <td>COMPANY NEWS; BERKLEY PETROLEUM APPROVES SHARE...</td>\n      <td>2000-12-30</td>\n    </tr>\n    <tr>\n      <th>2000-12-23</th>\n      <td>1</td>\n      <td>New Mexico</td>\n      <td>glocations</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>2000-12-23T05:00:00+0000</td>\n      <td>6</td>\n      <td>[{'name': 'glocations', 'value': 'New Mexico',...</td>\n      <td>article</td>\n      <td>nyt://article/1fe65aa7-59d3-500d-8071-b32e5eb5...</td>\n      <td>[{'name': 'glocations', 'value': 'New Mexico',...</td>\n      <td>Delta Petroleum in Deal</td>\n      <td>Business/Financial Desk</td>\n      <td>Delta Petroleum in Deal</td>\n      <td>2000-12-23</td>\n    </tr>\n    <tr>\n      <th>2000-12-29</th>\n      <td>2</td>\n      <td>Oil (Petroleum) and Gasoline</td>\n      <td>subject</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>2000-12-29T05:00:00+0000</td>\n      <td>2</td>\n      <td>[{'name': 'subject', 'value': 'Oil (Petroleum)...</td>\n      <td>article</td>\n      <td>nyt://article/e084f9f3-03e1-5608-a6ec-923d6bd3...</td>\n      <td>[{'name': 'subject', 'value': 'Oil (Petroleum)...</td>\n      <td>THE MARKETS: COMMODITIES</td>\n      <td>Business/Financial Desk</td>\n      <td>THE MARKETS: COMMODITIES</td>\n      <td>2000-12-29</td>\n    </tr>\n    <tr>\n      <th>2000-12-31</th>\n      <td>3</td>\n      <td>Brazil</td>\n      <td>glocations</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>2000-12-31T05:00:00+0000</td>\n      <td>4</td>\n      <td>[{'name': 'glocations', 'value': 'Brazil', 'ra...</td>\n      <td>article</td>\n      <td>nyt://article/07ee3d9c-57c2-5e1c-b1cc-b4b1cbbe...</td>\n      <td>[{'name': 'glocations', 'value': 'Brazil', 'ra...</td>\n      <td>Exploratory Oil Drilling From S to X and Back</td>\n      <td>Money and Business/Financial Desk</td>\n      <td>BUSINESS: DIARY; Exploratory Oil Drilling From...</td>\n      <td>2000-12-31</td>\n    </tr>\n    <tr>\n      <th>2000-12-27</th>\n      <td>4</td>\n      <td>Weather</td>\n      <td>subject</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>2000-12-27T05:00:00+0000</td>\n      <td>5</td>\n      <td>[{'name': 'subject', 'value': 'Weather', 'rank...</td>\n      <td>article</td>\n      <td>nyt://article/f577789f-abf5-5275-be64-cd1fe8fd...</td>\n      <td>[{'name': 'subject', 'value': 'Weather', 'rank...</td>\n      <td>THE MARKETS: COMMODITIES</td>\n      <td>Business/Financial Desk</td>\n      <td>THE MARKETS: COMMODITIES</td>\n      <td>2000-12-27</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 105 columns</p>\n</div>"
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "df['date_col'] = df['date'].str.slice(stop=10)\n",
+    "df['date_col']=pd.to_datetime(\n",
+    "            df['date_col'],\n",
+    "            format = '%Y-%m-%d'\n",
+    "        )\n",
+    "df.set_index(\n",
+    "            df['date_col'],drop=True,inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "                                date  \\\ndate_col                               \n2000-01-01  2000-01-01T05:00:00+0000   \n2000-01-04  2000-01-04T05:00:00+0000   \n2000-01-08  2000-01-08T05:00:00+0000   \n2000-01-08  2000-01-08T05:00:00+0000   \n2000-01-09  2000-01-09T05:00:00+0000   \n\n                                                main_headline  \ndate_col                                                       \n2000-01-01  SCHLUMBERGER COMPLETES SPINOFF OF OFFSHORE OIL...  \n2000-01-04  From the Pipeline To the Courtroom; Gap on BP ...  \n2000-01-08                  The Greening of Corporate America  \n2000-01-08                           THE MARKETS: COMMODITIES  \n2000-01-09            Defanging the Great Inflationary Forces  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>main_headline</th>\n    </tr>\n    <tr>\n      <th>date_col</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2000-01-01</th>\n      <td>2000-01-01T05:00:00+0000</td>\n      <td>SCHLUMBERGER COMPLETES SPINOFF OF OFFSHORE OIL...</td>\n    </tr>\n    <tr>\n      <th>2000-01-04</th>\n      <td>2000-01-04T05:00:00+0000</td>\n      <td>From the Pipeline To the Courtroom; Gap on BP ...</td>\n    </tr>\n    <tr>\n      <th>2000-01-08</th>\n      <td>2000-01-08T05:00:00+0000</td>\n      <td>The Greening of Corporate America</td>\n    </tr>\n    <tr>\n      <th>2000-01-08</th>\n      <td>2000-01-08T05:00:00+0000</td>\n      <td>THE MARKETS: COMMODITIES</td>\n    </tr>\n    <tr>\n      <th>2000-01-09</th>\n      <td>2000-01-09T05:00:00+0000</td>\n      <td>Defanging the Great Inflationary Forces</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "df.sort_index(inplace=True)\n",
+    "df.drop('date_col',axis=1,inplace=True)\n",
+    "display(df[['date','main_headline']].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.connect('data/energydash.db')\n",
+    "\n",
+    "df.to_sql(\"news\",conn, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -76,9 +156,12 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'id', 'date', 'abstract', 'doc_type', 'main_headline',\n",
-       "       'print_headline', 'keywords', 'newsdesk'],\n",
-       "      dtype='object')"
+       "0    2000-12-30T05:00:00+0000\n",
+       "1    2000-12-23T05:00:00+0000\n",
+       "2    2000-12-29T05:00:00+0000\n",
+       "3    2000-12-31T05:00:00+0000\n",
+       "4    2000-12-27T05:00:00+0000\n",
+       "Name: date, dtype: object"
       ]
      },
      "metadata": {},
@@ -86,7 +169,7 @@
     }
    ],
    "source": [
-    "df1.columns"
+    "df['date'].head()"
    ]
   },
   {
