Graphs done pretty much

--- a/1_MainAnalysis.ipynb
+++ b/1_MainAnalysis.ipynb
@@ -9,14 +9,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-27T22:33:00.348860Z",
      "start_time": "2020-09-27T22:32:54.441424Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "warning: LF will be replaced by CRLF in 1_MainAnalysis.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in 2_NYT_API.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in Dataget.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "[master 02fa844] Graphs done pretty much\n",
+      " 16 files changed, 776 insertions(+), 34 deletions(-)\n",
+      " create mode 100644 Dataget.ipynb\n",
+      " create mode 100644 application_old.py\n",
+      " create mode 100644 get_data.py\n",
+      " create mode 100644 nyt_api/__pycache__/nyt_api.cpython-38.pyc\n",
+      "To https://github.com/thekhan314/CrudeOilApp.git\n",
+      "   4fe85a7..02fa844  master -> master\n"
+     ]
+    }
+   ],
    "source": [
     "!git add .\n",
     "!git commit -m \"Graphs done pretty much\"\n",
