--- a/1_MainAnalysis.ipynb
+++ b/1_MainAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-27T22:33:00.348860Z",
@@ -25,22 +25,51 @@
       "The file will have its original line endings in your working directory\n",
       "warning: LF will be replaced by CRLF in 2_NYT_API.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "warning: LF will be replaced by CRLF in Dataget.ipynb.\n",
+      "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 02fa844] Graphs done pretty much\n",
-      " 16 files changed, 776 insertions(+), 34 deletions(-)\n",
-      " create mode 100644 Dataget.ipynb\n",
-      " create mode 100644 application_old.py\n",
-      " create mode 100644 get_data.py\n",
-      " create mode 100644 nyt_api/__pycache__/nyt_api.cpython-38.pyc\n",
+      "[master 464f54a] Graphs done pretty much\n",
+      " 38 files changed, 546 insertions(+), 25637 deletions(-)\n",
+      " rewrite 2_NYT_API.ipynb (97%)\n",
+      " create mode 100644 3_testing.ipynb\n",
+      " delete mode 100644 Dataget.ipynb\n",
+      " create mode 100644 __pycache__/data_functions.cpython-38.pyc\n",
+      " delete mode 100644 application_old.py\n",
+      " create mode 100644 energydash.db\n",
+      " delete mode 100644 get_data.py\n",
+      " delete mode 100644 nyt_api/__pycache__/nyt_api.cpython-38.pyc\n",
+      " delete mode 100644 nyt_api/bulk_article_download.py\n",
+      " delete mode 100644 nyt_api/nyt_api.py\n",
+      " delete mode 100644 nyt_api/nyt_articles.csv\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20000101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20010101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20020101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20030101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20040101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20050101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20060101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20070101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20080101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20090101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20100101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20110101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20120101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20130101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20140101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20150101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20160101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20170101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20180101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20190101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_jsons/20200101_articles.json\n",
+      " delete mode 100644 nyt_api/nyt_with_keywords.csv\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   4fe85a7..02fa844  master -> master\n"
+      "   02fa844..464f54a  master -> master\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"Graphs done pretty much\"\n",
+    "!git commit -m \"News Report is working (but not live updating)\"\n",
     "!git push"
    ]
   },
