News Report is working (but not live updating)

--- a/1_MainAnalysis.ipynb
+++ b/1_MainAnalysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-27T22:33:00.348860Z",
@@ -23,47 +23,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 1_MainAnalysis.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "warning: LF will be replaced by CRLF in 2_NYT_API.ipynb.\n",
-      "The file will have its original line endings in your working directory\n",
-      "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
-      "The file will have its original line endings in your working directory\n",
-      "[master 464f54a] Graphs done pretty much\n",
-      " 38 files changed, 546 insertions(+), 25637 deletions(-)\n",
-      " rewrite 2_NYT_API.ipynb (97%)\n",
-      " create mode 100644 3_testing.ipynb\n",
-      " delete mode 100644 Dataget.ipynb\n",
-      " create mode 100644 __pycache__/data_functions.cpython-38.pyc\n",
-      " delete mode 100644 application_old.py\n",
-      " create mode 100644 energydash.db\n",
-      " delete mode 100644 get_data.py\n",
-      " delete mode 100644 nyt_api/__pycache__/nyt_api.cpython-38.pyc\n",
-      " delete mode 100644 nyt_api/bulk_article_download.py\n",
-      " delete mode 100644 nyt_api/nyt_api.py\n",
-      " delete mode 100644 nyt_api/nyt_articles.csv\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20000101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20010101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20020101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20030101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20040101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20050101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20060101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20070101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20080101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20090101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20100101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20110101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20120101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20130101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20140101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20150101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20160101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20170101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20180101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20190101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_jsons/20200101_articles.json\n",
-      " delete mode 100644 nyt_api/nyt_with_keywords.csv\n",
+      "[master e6e8f15] News Report is working (but not live updating)\n",
+      " 1 file changed, 39 insertions(+), 10 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   02fa844..464f54a  master -> master\n"
+      "   464f54a..e6e8f15  master -> master\n"
      ]
     }
    ],
@@ -127,6 +90,8 @@
     "\n",
     "monthly_imports = EIA_Series('Monthly Imports','PET.MCRIMUS1.M',desc,date_format='%Y%m' )\n",
     "dep.ingest(monthly_imports)\n",
+    "\n",
+    "weekly_inventory = EIA_Series('Weekly Inventory','PET.WCRSTUS1.W')\n",
     "\n",
     "weekly_sales = EIA_Series('Product Sold','PET.WRPUPUS2.W')\n",
     "dep.ingest(weekly_sales)\n",
@@ -250,7 +215,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "update_calls = {\n",
+    "    '235079':\n",
+    "}"
+   ]
   },
   {
    "source": [],
