--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.3 64-bit ('base': conda)",
-   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "name": "Python 3.8.3 64-bit (conda)",
+   "display_name": "Python 3.8.3 64-bit (conda)",
    "metadata": {
     "interpreter": {
      "hash": "5d42bb3e1c1afa804c296b0713415242ceb93874b5c1d7016309b07083afc30a"
@@ -28,6 +28,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add .\n",
+    "!git commit -m \"News Report is working (but not live updating)\"\n",
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -38,7 +49,198 @@
     "import sqlite3\n",
     "import pandas as pd\n",
     "\n",
-    "from datashop import *\n"
+    "from datashop import *\n",
+    "\n",
+    "path = 'c:/prompt_root/CrudeOilApp'\n",
+    "relpath = '/data/nyt_api/nyt_jsons/'\n",
+    "\n",
+    "conn = sqlite3.connect('data/energydash.db')\n",
+    "\n",
+    "#test_bulk = jsons_to_frame(path,relpath,conn)\n",
+    "#test_bulk.to_csv('data/nyt_api/nyt_articles.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "20200501\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime as dt\n",
+    "\n",
+    "query = \" SELECT MAX(Date) from MonthlyRigCount\"\n",
+    "last_date = conn.execute(query).fetchall()[0][0]\n",
+    "last_date = dt.datetime.strptime(last_date[:10], '%Y-%m-%d').strftime('%Y%m%d')\n",
+    "print(last_date)"
+   ]
+  },
+  {
+   "source": [
+    "# EIA Data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "                  Date  WeeklyStocks\n",
+      "0  2020-09-04 00:00:00     2072722.0\n",
+      "1  2020-09-03 00:00:00     2076448.0\n",
+      "2  2020-09-02 00:00:00     2076448.0\n",
+      "3  2020-09-01 00:00:00     2076448.0\n",
+      "4  2020-08-31 00:00:00     2076448.0\n",
+      "                  Date  DailyPrice\n",
+      "0  2020-09-10 00:00:00       37.25\n",
+      "1  2020-09-09 00:00:00       38.05\n",
+      "2  2020-09-08 00:00:00       36.87\n",
+      "3  2020-09-07 00:00:00       39.69\n",
+      "4  2020-09-04 00:00:00       39.69\n",
+      "                  Date  ProductSupplied\n",
+      "0  2020-09-04 00:00:00          18678.0\n",
+      "1  2020-09-03 00:00:00          16979.0\n",
+      "2  2020-09-02 00:00:00          16979.0\n",
+      "3  2020-09-01 00:00:00          16979.0\n",
+      "4  2020-08-31 00:00:00          16979.0\n",
+      "                  Date  MonthlyRigCount\n",
+      "0  2020-05-01 00:00:00            267.0\n",
+      "1  2020-04-30 00:00:00            471.0\n",
+      "2  2020-04-29 00:00:00            471.0\n",
+      "3  2020-04-28 00:00:00            471.0\n",
+      "4  2020-04-27 00:00:00            471.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# EIA_Bulk\n",
+    "\n",
+    "\n",
+    "eia_dict = {\n",
+    "    'PET.WTTSTUS1.W':['WeeklyStocks','235081','%Y%m%d'],\n",
+    "    'PET.RWTC.D':['DailyPrice','241335','%Y%m%d'],\n",
+    "    'PET.WRPUPUS2.W':['ProductSupplied','401676','%Y%m%d'],\n",
+    "    'PET.E_ERTRRO_XR0_NUS_C.M':['MonthlyRigCount','296749','%Y%m']\n",
+    "}\n",
+    "\n",
+    "for key,val in eia_dict.items():\n",
+    "\n",
+    "    e_ser = EIA_Series(key,name = val[0],date_format = val[2], end = '20200910')\n",
+    "\n",
+    "    bulk_ser = e_ser.series\n",
+    "\n",
+    "    bulk_ser.to_sql(val[0],conn,if_exists='replace')  \n",
+    "\n",
+    "    query = \" SELECT * FROM {} ORDER BY Date DESC LIMIT 5\".format(val[0])\n",
+    "    df = pd.read_sql(query,conn)\n",
+    "    print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'WeeklyStocks': ('2020-10-30 00:00:00', 2015817.0), 'DailyPrice': ('2020-11-03 00:00:00', 37.44), 'ProductSupplied': ('2020-10-30 00:00:00', 18362.0), 'MonthlyRigCount': ('2020-05-01 00:00:00', 267.0)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "eia_dict = {\n",
+    "    'PET.WTTSTUS1.W':['WeeklyStocks','235081','%Y%m%d'],\n",
+    "    'PET.RWTC.D':['DailyPrice','241335','%Y%m%d'],\n",
+    "    'PET.WRPUPUS2.W':['ProductSupplied','401676','%Y%m%d'],\n",
+    "    'PET.E_ERTRRO_XR0_NUS_C.M':['MonthlyRigCount','296749','%Y%m']\n",
+    "}\n",
+    "\n",
+    "with open ('data/cache.json','r') as cache_file:\n",
+    "    cache_dict = json.load(cache_file)\n",
+    "\n",
+    "#_________ Base URL. Requires category ID to return series in that category\"\n",
+    "\n",
+    "eia_api_url= 'http://api.eia.gov/updates/?api_key=651b30b69f4f47a13a2912d673f7da93&category_id='\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ________ Get last update time for each series. \n",
+    "\n",
+    "current_eia = {}\n",
+    "\n",
+    "for key,val in eia_dict.items():\n",
+    "\n",
+    "    url = eia_api_url + val[1] + '&rows=10000'\n",
+    "    request = requests.get(url)\n",
+    "    dict = json.loads(request.text)\n",
+    "\n",
+    "    # Load last updated time from DB\n",
+    "    \n",
+    "    query = \" SELECT MAX(Date) from {}\".format(val[0])\n",
+    "    last_date = conn.execute(query).fetchall()[0][0]\n",
+    "    last_date_eia = dt.datetime.strptime(last_date[:10], '%Y-%m-%d').strftime(val[2])\n",
+    "\n",
+    "    last_update = 'not found'\n",
+    "    #Get last updated time from API\n",
+    "    for update in dict['updates']:\n",
+    "        if update['series_id'] == key:\n",
+    "            last_update = update['updated']\n",
+    "            last_update = dt.datetime.strptime(last_update[:10], '%Y-%m-%d').strftime(val[2])\n",
+    "\n",
+    "    #compare both, get updates if needed and add to table\n",
+    "\n",
+    "    if last_update > last_date:\n",
+    "        new_series = EIA_Series(\n",
+    "            key, \n",
+    "            name=val[0],\n",
+    "            start = last_date_eia,\n",
+    "            date_format = val[2]).series\n",
+    "\n",
+    "        new_series = new_series[new_series.index > pd.Timestamp(last_date)]\n",
+    "        new_series.to_sql(val[0],conn,if_exists='append')   \n",
+    "\n",
+    "    # get the current last value for later use\n",
+    "\n",
+    "    query = \" SELECT * FROM  {} WHERE Date = (SELECT MAX(Date) FROM {})\".format(val[0],val[0])\n",
+    "    last_date = conn.execute(query).fetchall()[0]\n",
+    "\n",
+    "    current_eia[val[0]] = last_date\n",
+    "\n",
+    "print(current_eia)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2020-10-30 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.Timestamp(last_date))"
    ]
   },
   {
@@ -47,14 +249,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'c:/prompt_root/CrudeOilApp'\n",
-    "relpath = '/data/nyt_api/nyt_jsons/'\n",
-    "\n",
-    "conn = sqlite3.connect('data/energydash.db')\n",
-    "\n",
-    "test_bulk = jsons_to_frame(path,relpath,conn)\n",
-    "#test_bulk.to_csv('data/nyt_api/nyt_articles.csv')"
+    "if last_update > last_date:\n",
+    "        new_series = EIA_Series(key,start=last_date)\n",
+    "        new_series.series.to_sql(val[0],conn,if_exists='append')"
    ]
+  },
+  {
+   "source": [
+    "# News Data "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -69,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,81 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Testing News\n",
+    "\n",
     "conn = sqlite3.connect('data/energydash.db')\n",
     "\n",
     "query = 'SELECT date,abstract,url,retrieved FROM news ORDER BY date DESC LIMIT 10'\n",
     "df = pd.read_sql_query(query,conn)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "                  date                                           abstract  \\\n0  2020-10-26T22:45:08  The Trump administration is trying to fortify ...   \n1  2020-10-23T21:39:34  The penalties were aimed at a Russian research...   \n2  2020-10-23T19:02:36  After the candidate called for a “transition” ...   \n3  2020-10-23T14:30:44  Joseph R. Biden Jr.'s debate statement that he...   \n4  2020-10-19T19:40:14  With the price of a barrel stuck around $40 an...   \n5  2020-10-17T09:00:16  There is heartbreak almost everywhere you look...   \n6  2020-10-16T19:00:06  Two new books, David H. Rundell’s “Vision or M...   \n7  2020-10-16T17:12:50  The White House has dismantled major climate a...   \n8  2020-10-15T21:17:50  The assault was an escalation of violence in t...   \n9  2020-10-14T14:12:37  Teams from the neighboring Middle Eastern coun...   \n\n                                                 url  \\\n0  https://www.nytimes.com/2020/10/26/world/middl...   \n1  https://www.nytimes.com/2020/10/23/us/politics...   \n2  https://www.nytimes.com/2020/10/23/business/en...   \n3  https://www.nytimes.com/2020/10/23/climate/bid...   \n4  https://www.nytimes.com/2020/10/19/business/en...   \n5  https://www.nytimes.com/2020/10/17/business/pr...   \n6  https://www.nytimes.com/2020/10/16/books/revie...   \n7  https://www.nytimes.com/interactive/2020/clima...   \n8  https://www.nytimes.com/2020/10/15/world/asia/...   \n9  https://www.nytimes.com/2020/10/14/world/middl...   \n\n                    retrieved  \n0  2020-10-27 20:43:46.449274  \n1  2020-10-27 20:43:46.449274  \n2  2020-10-27 20:43:46.449274  \n3  2020-10-27 20:43:46.449274  \n4  2020-10-27 20:43:46.449274  \n5  2020-10-27 20:43:46.449274  \n6  2020-10-27 20:43:46.449274  \n7  2020-10-27 20:43:46.449274  \n8  2020-10-27 20:43:46.449274  \n9  2020-10-27 20:43:46.449274  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>abstract</th>\n      <th>url</th>\n      <th>retrieved</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2020-10-26T22:45:08</td>\n      <td>The Trump administration is trying to fortify ...</td>\n      <td>https://www.nytimes.com/2020/10/26/world/middl...</td>\n      <td>2020-10-27 20:43:46.449274</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2020-10-23T21:39:34</td>\n      <td>The penalties were aimed at a Russian research...</td>\n      <td>https://www.nytimes.com/2020/10/23/us/politics...</td>\n      <td>2020-10-27 20:43:46.449274</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2020-10-23T19:02:36</td>\n      <td>After the candidate called for a “transition” ...</td>\n      <td>https://www.nytimes.com/2020/10/23/business/en...</td>\n      <td>2020-10-27 20:43:46.449274</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2020-10-23T14:30:44</td>\n      <td>Joseph R. Biden Jr.'s debate statement that he...</td>\n      <td>https://www.nytimes.com/2020/10/23/climate/bid...</td>\n      <td>2020-10-27 20:43:46.449274</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2020-10-19T19:40:14</td>\n      <td>With the price of a barrel stuck around $40 an...</td>\n      <td>https://www.nytimes.com/2020/10/19/business/en...</td>\n      <td>2020-10-27 20:43:46.449274</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2020-10-17T09:00:16</td>\n      <td>There is heartbreak almost everywhere you look...</td>\n      <td>https://www.nytimes.com/2020/10/17/business/pr...</td>\n      <td>2020-10-27 20:43:46.449274</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2020-10-16T19:00:06</td>\n      <td>Two new books, David H. Rundell’s “Vision or M...</td>\n      <td>https://www.nytimes.com/2020/10/16/books/revie...</td>\n      <td>2020-10-27 20:43:46.449274</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2020-10-16T17:12:50</td>\n      <td>The White House has dismantled major climate a...</td>\n      <td>https://www.nytimes.com/interactive/2020/clima...</td>\n      <td>2020-10-27 20:43:46.449274</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2020-10-15T21:17:50</td>\n      <td>The assault was an escalation of violence in t...</td>\n      <td>https://www.nytimes.com/2020/10/15/world/asia/...</td>\n      <td>2020-10-27 20:43:46.449274</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2020-10-14T14:12:37</td>\n      <td>Teams from the neighboring Middle Eastern coun...</td>\n      <td>https://www.nytimes.com/2020/10/14/world/middl...</td>\n      <td>2020-10-27 20:43:46.449274</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {}
-    }
-   ],
-   "source": [
-    "display(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dash_html_components as html\n",
-    "\n",
-    "def makelink(url):\n",
-    "    link = html.A(html.P('Full Article'),href=url)\n",
-    "    return link\n",
-    "    \n",
-    "df['hlinks']= df['url'].apply(makelink)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for item in columns:\n",
-    "    item['type'] = 'text',\n",
-    "    item['presentation'] = 'markdown'\n",
-    "\n",
-    "news_table = dash_table.DataTable(\n",
-    "    id='newstable',\n",
-    "    columns = columns,\n",
-    "    data=df_news.to_dict('records')\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
