EIA Data updating script looks good to go

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -28,12 +28,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "warning: LF will be replaced by CRLF in 1_MainAnalysis.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
+      "The file will have its original line endings in your working directory\n",
+      "[master f0b4ec9] News Report is working (but not live updating)\n",
+      " 8 files changed, 432 insertions(+), 225 deletions(-)\n",
+      " rewrite 3_testing.ipynb (67%)\n",
+      " create mode 100644 scripts/bulk_download.py\n",
+      "To https://github.com/thekhan314/CrudeOilApp.git\n",
+      "   e6e8f15..f0b4ec9  master -> master\n"
+     ]
+    }
+   ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"News Report is working (but not live updating)\"\n",
+    "!git commit -m \"EIA Data updating script looks good to go\"\n",
     "!git push"
    ]
   },
