Log Handling is done. Lets Deploy!

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -37,23 +37,30 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "warning: LF will be replaced by CRLF in data/dji.csv.\n",
-      "The file will have its original line endings in your working directory\n",
-      "[master 8fca5b3] New database structure is working\n",
-      " 13 files changed, 1962 insertions(+), 5381 deletions(-)\n",
-      " create mode 100644 bulk_download.py\n",
-      " rewrite data/dji.csv (76%)\n",
-      " delete mode 100644 scripts/bulk_download.py\n",
-      " rename scripts/{eia_classes.py => eia_classesDONOTUSE.py} (100%)\n",
-      " create mode 100644 update_data.py\n",
-      "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   1e449d5..8fca5b3  master -> master\n"
+      "[master 146fdfb] New database structure is working\n",
+      " 18 files changed, 555 insertions(+), 1421 deletions(-)\n",
+      " rewrite __pycache__/data_functions.cpython-38.pyc (94%)\n",
+      " rename appplication_components.py => application_components.py (98%)\n",
+      " delete mode 100644 data/dji.csv\n",
+      " rename bulk_download.py => data_bulk_download.py (88%)\n",
+      " create mode 100644 data_functions.py\n",
+      " rename update_data.py => data_update_script.py (85%)\n",
+      " delete mode 100644 energydash.db\n",
+      " create mode 100644 log_handling.py\n",
+      " delete mode 100644 scripts/__init__.py\n",
+      " delete mode 100644 scripts/__pycache__/__init__.cpython-36.pyc\n",
+      " delete mode 100644 scripts/__pycache__/__init__.cpython-38.pyc\n",
+      " delete mode 100644 scripts/__pycache__/eia_classes.cpython-36.pyc\n",
+      " delete mode 100644 scripts/__pycache__/eia_classes.cpython-38.pyc\n",
+      " delete mode 100644 scripts/__pycache__/nyt_api.cpython-38.pyc\n",
+      " delete mode 100644 scripts/eia_classesDONOTUSE.py\n",
+      " rename scripts/snips.py => xscrapssnips.py (100%)\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"New database structure is working\"\n",
+    "!git commit -m \"Log Handling is done. Lets Deploy!\"\n",
     "!git push"
    ]
   },
