fixed application ref

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,16 +37,18 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 5c5d271] Log Handling is done. Lets Deploy!\n",
-      " 1 file changed, 20 insertions(+), 13 deletions(-)\n",
+      "[master aded994] Log Handling is done. Lets Deploy!\n",
+      " 3 files changed, 5 insertions(+), 22 deletions(-)\n",
+      " delete mode 100644 envs/.nonadmin\n",
+      " delete mode 100644 envs/conda-meta/history\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   146fdfb..5c5d271  master -> master\n"
+      "   5c5d271..aded994  master -> master\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"Log Handling is done. Lets Deploy!\"\n",
+    "!git commit -m \"fixed application ref\"\n",
     "!git push"
    ]
   },
