fixed application ref

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,10 +37,11 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master 2f6b591] fixed application ref\n",
+      "[master c5a1249] fixed application ref\n",
       " 2 files changed, 8 insertions(+), 6 deletions(-)\n",
+      " create mode 100644 wsgi.py\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   aded994..2f6b591  master -> master\n"
+      "   2f6b591..c5a1249  master -> master\n"
      ]
     }
    ],
