fixed application ref

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,11 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master c5a1249] fixed application ref\n",
-      " 2 files changed, 8 insertions(+), 6 deletions(-)\n",
-      " create mode 100644 wsgi.py\n",
+      "[master 56b6cde] fixed application ref\n",
+      " 3 files changed, 8 insertions(+), 5 deletions(-)\n",
+      " rename application.py => __init__.py (98%)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   2f6b591..c5a1249  master -> master\n"
+      "   c5a1249..56b6cde  master -> master\n"
      ]
     }
    ],
