energy env in gitignore

--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -37,10 +37,11 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master e1bbb64d] energy env in gitignore\n",
-      " 2 files changed, 6 insertions(+), 7 deletions(-)\n",
+      "[master c88de825] energy env in gitignore\n",
+      " 4 files changed, 727 insertions(+), 79318 deletions(-)\n",
+      " rewrite 3_testing.ipynb (97%)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   37692c7b..e1bbb64d  master -> master\n"
+      "   e1bbb64d..c88de825  master -> master\n"
      ]
     }
    ],
